# JModelica

./: .gitignore  .gitmodules  CHANGELOG.txt  CMakeLists.txt  CleanIgnored.bat  Dockerfile_full_image  INSTALL  Jenkinsfile  Jenkinsfile-linux  LICENSE  Makefile.am  Makefile.in  README.md  autogen.sh  bootstrap.bat  build.sh  clean_ignored.sh  config.h.in  configure  configure.ac  get_version.sh  install_jmodelica.sh  jm_tests.in  rebuild.sh  run_java.sh
Compiler/: build-base.xml  (+1 more)
Compiler/ModelicaCompilerCasADi/src/swig/: CMakeLists.txt  casadi_wrap.i  ifcasadi.cpp  ifcasadi.hpp  java_casadi.i
ModelicaCasADiInterface/: CMakeLists.txt
ModelicaCasADiInterface/python/: __init__.py  modelica_casadi_transfer_wrapper.py
ModelicaCasADiInterface/src/: BLT.cpp  BLT.hpp  Block.cpp  Block.hpp  BooleanVariable.cpp  BooleanVariable.hpp  CMakeLists.txt  CompilerOptionsWrapper.cpp  CompilerOptionsWrapper.hpp  Constraint.cpp  Constraint.hpp  DerivativeVariable.cpp  DerivativeVariable.hpp  Equation.cpp  Equation.hpp  Equations.cpp  Equations.hpp  FlatEquations.cpp  FlatEquations.hpp  IntegerVariable.cpp  IntegerVariable.hpp  Model.cpp  Model.hpp  ModelFunction.cpp  ModelFunction.hpp  OptimizationProblem.cpp  OptimizationProblem.hpp  OwnedNode.hpp  Printable.cpp  Printable.hpp  RealVariable.cpp  RealVariable.hpp  Ref.hpp  RefCountedNode.cpp  RefCountedNode.hpp  SharedNode.hpp  TimedVariable.cpp  TimedVariable.hpp  Variable.cpp  Variable.hpp  (+7 more)
ModelicaCasADiInterface/src/jcc/: CMakeLists.txt  initjcc.cpp  initjcc.h  jccexception.h  jccutils.cpp  jccutils.h  mxfunctionwrap.hpp  mxvectorwrap.hpp  mxwrap.hpp
ModelicaCasADiInterface/src/types/: BooleanType.cpp  BooleanType.hpp  IntegerType.cpp  IntegerType.hpp  PrimitiveType.cpp  PrimitiveType.hpp  RealType.cpp  RealType.hpp  UserType.cpp  UserType.hpp  VariableType.cpp  VariableType.hpp
ModelicaCasADiInterface/swig/: CMakeLists.txt  ModelicaCasADi.i  Ref.i  casadi_interface.i  doc.i  vectors.i
Python/: .project  .pydevproject  CMakeLists.txt  Makefile.am  Makefile.in  build.bat  jm_ipython.sh.in  jm_python.sh.in  setup.py
Python/src/: required_defaults.py.in  setup_jmodelica.py  setup_pyjmi.py  setup_pymodelica.py  startup.py
Python/src/pyjmi/: __init__.py  casadi_interface.py  jmi.py  jmi_algorithm_drivers.py  jmi_io.py  linearization.py  logger_util.py  symbolic_elimination.py  ukf.py
Python/src/pyjmi/examples/: QR.py  RLC.py  SEIRS.py  SolAng.py  VDP_sim.py  __init__.py  blood_glucose.py  bounds_kinsol.py  cart_pendulum.py  ccpp.py  ccpp_elimination.py  ccpp_sym_elim.py  crane.py  crystallizer.py  cstr_casadi.py  cstr_constrained_mhe_example.py  cstr_mhe_example.py  cstr_mpc_casadi.py  delayed_feedback_opt.py  distillation1_fmu.py  distillation2_fmu.py  distillation4_fmu.py  distillation4_opt.py  distillation_fmu.py  double_pendulum.py  elimination_example.py  extFunctions_arrays.py  extFunctions_matrix.py  extfunctions.py  fed_batch_oed.py  fourbar1.py  furuta_dfo.py  furuta_dfo_cost.py  furuta_dfo_using_algorithm_drivers.py  furuta_modified.py  greybox_identification.py  if_example_1.py  if_example_2.py  logger_example.py  mechanical_rotational_examples_coupled_clutches.py  (+14 more)
Python/src/pyjmi/initialization/: __init__.py  ipopt.py
Python/src/pyjmi/log/: __init__.py  jmi_log.py  parser.py  prettyprinter.py  tree.py
Python/src/pyjmi/optimization/: __init__.py  assimulo_shooting.py  casadi_collocation.py  dfo.py  func_eval.py  gen_nice_qt_plot.py  greybox.py  ipopt.py  mpc.py  polynomial.py  realtimecontrol.py  sundials_deprecated.py_  thread_feval.py
Python/src/pymodelica/: __init__.py  compiler.py  compiler_exceptions.py  compiler_interface.py  compiler_logging.py  compiler_wrappers.py
Python/src/tests_jmodelica/: __init__.py  test_casadiinterface_transfer.py  test_casadiinterface_unittests.py  test_compiler.py  test_core.py  test_delay.py  test_examples_casadi.py  test_examples_casadi_2.py  test_examples_fmi.py  test_examples_jmi.py  test_fmi.py  test_fmi_2.py  test_fmi_coupled.py  test_fmi_extended.py  test_init.py  test_io.py  test_linearization.py  test_symbolic_elimination.py  test_ukf.py
Python/src/tests_jmodelica/general/: __init__.py  base_simul.py  test_extfunctions.py  test_functions.py  test_guid.py  test_operators.py  test_parameter_eval.py  test_reinit.py  test_simulation.py  test_strings.py  test_tables.py
Python/src/tests_jmodelica/initialization/: __init__.py  test_KINsolver_log.txt  test_KINsolver_options.py  test_brent.py  test_init_logging.py
Python/src/tests_jmodelica/optimization/: __init__.py  test_back_tracking.py  test_casadi_collocation.py  test_code_generation.py  test_delayed_feedback.py  test_greybox.py  test_mhe.py  test_mpc.py  test_polynomial.py  test_realtime_mpc.py  test_warm_start.py
Python/src/tests_jmodelica/simulation/: __init__.py  test_assimulo_interface_fmi.py
RuntimeLibrary/: CMakeLists.txt  Makefile.am  Makefile.in
RuntimeLibrary/Makefiles/: Makefile.linux  Makefile.macosx  Makefile.windows
RuntimeLibrary/src/fmi1_cs/: CMakeLists.txt  fmi1_cs.c  fmi1_cs.h  fmiCSFunctions.h  fmiCSPlatformTypes.h
RuntimeLibrary/src/fmi1_me/: CMakeLists.txt  fmi1_functions.h  fmi1_me.c  fmi1_me.h  fmi1_types.h  fmiModelFunctions.h
RuntimeLibrary/src/fmi2/: CMakeLists.txt  fmi2_cs.c  fmi2_cs.h  fmi2_me.c  fmi2_me.h
RuntimeLibrary/src/jmi/: CMakeLists.txt  ModelicaUtilities.c  ModelicaUtilities.h  jmi.c  jmi.h  jmi_array_none.c  jmi_array_none.h  jmi_block_log.c  jmi_block_log.h  jmi_block_residual.c  jmi_block_residual.h  jmi_block_solver.c  jmi_block_solver.h  jmi_block_solver_impl.h  jmi_block_solver_test.c  jmi_brent_search.h  jmi_brent_solver.c  jmi_brent_solver.h  jmi_callbacks.h  jmi_chattering.c  jmi_chattering.h  jmi_cs.c  jmi_cs.h  jmi_delay.c  jmi_delay.h  jmi_delay_impl.h  jmi_dyn_mem.c  jmi_dyn_mem.h  jmi_dyn_mem_.c  jmi_dynamic_state.c  jmi_dynamic_state.h  jmi_global.c  jmi_global.h  jmi_kinsol_solver.c  jmi_kinsol_solver.h  jmi_linear_algebra.c  jmi_linear_algebra.h  jmi_linear_solver.c  jmi_linear_solver.h  jmi_log.c  (+30 more)
RuntimeLibrary/src/modules/: CMakeLists.txt
(+948 files in other folders)
